<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/original_gps_signal_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_original_signal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/on_recieve" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/longitude_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/on_recieve" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/latitude_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/on_recieve" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/elevation_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_elevation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/on_recieve" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/mode_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/on_recieve" />

    <Button
        android:id="@+id/btn_discovery"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableRight="@android:drawable/ic_menu_search"
        android:text="@string/discover_gps_device" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:baselineAligned="false" >

        <ToggleButton
            android:id="@+id/btn_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@android:drawable/ic_menu_directions"
            android:enabled="false"
            android:textOff="@string/start_a_new_session"
            android:textOn="@string/end_session" />

        <CheckBox
            android:id="@+id/switch_annotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@android:drawable/ic_menu_edit" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    	
    	<ToggleButton
    	    android:id="@+id/btn_single_record"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:enabled="false"
    		android:layout_weight="1"
    		android:drawableRight="@android:drawable/ic_menu_myplaces"
    		android:textOff="@string/single_point_record" />

    	<ToggleButton
    	    android:id="@+id/btn_recording"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:enabled="false"
    	    android:drawableRight="@android:drawable/ic_menu_recent_history"
    	    android:textOff="@string/keep_recording"
    	    android:textOn="@string/stop_recording" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="All Rights Reserved"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:text="2012 Copyright © Drew Xiu"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/et_command"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/input_command"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_send"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_command"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/et_command"
            android:enabled="false"
            android:text="@string/send" />

    </RelativeLayout>

</LinearLayout>